# face_recognition

./: .env.example  .gitignore  README.md  app.py  config.json  dashboard.py  pyproject.toml  requirements.txt
surveillance_app/: __init__.py  config.py  dashboard_web.py  gui.py  logging_utils.py  services.py  utils.py  vision.py
tests/: test_config.py  test_dashboard.py  test_vision.py
